--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-media": "^1.10.0",
     "react-router-dom": "^6.16.0",
